# drone-zone-map

./: .gitignore  .npmignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
docs/: ADDING_A_COUNTRY.md  AUTHENTICATED_PROVIDERS.md  DATA_SOURCES.md  DEPLOYMENT.md  GEODATA_GUIDE.md  LEGAL_AND_LICENSING.md  OFFLINE_ARCHITECTURE.md  PROVIDER_ARCHITECTURE.md  TRANSLATION_SYSTEM.md  UPDATING_DATA.md  ZONE_EXPLANATION_MODEL.md
pipeline/: README.md  audit_registry.py  check_source_health.py  generate_provider_baselines.py  import_private_export.py  main.py  pyproject.toml  update_country.py  validate_geojson.py  verify_public_geozones.py  world.py
pipeline/adapters/: base.py  canada_open_data.py  ed269.py  france_geoportail.py  germany_dipul.py  ireland_iaa.py  luxembourg_geojson.py  public_uas_feeds.py  spain_enaire.py  sweden_lfv.py  uk_nats.py
pipeline/discovery/: __init__.py  arcgis_webmap_inventory.py  public_endpoint_discovery.py
pipeline/private_importer/: __init__.py  core.py  state.py
pipeline/private_importer/mappings/: README.md
pipeline/reports/: germany-wms.json  slovakia-kml-package.json  slovenia-arcgis-webmap.json  source-coverage-audit.json  source-health-audit.json
pipeline/state/: world-progress.json
pipeline/tests/: test_ed269.py  test_private_importer.py  test_source_audit.py
public/: manifest.webmanifest  sw.js
reports/: AUTHENTICATION_REQUIRED.json  COUNTRY_COVERAGE.json  DATA_VALIDATION.json  (+9 more)
(+59 files in other folders)
