[project]
name = "drone-zone-map-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "httpx>=0.27", "pycountry>=24.6.1"]

# This project is a command-and-script collection executed from the repository
# root.  Do not let setuptools mistake its data directories for distributable
# top-level packages when installing the declared test/runtime dependencies.
[tool.setuptools]
packages = []
